# monitoring-camera

./: LICENESE.txt  README.md
src/: CMakeCache.txt  CMakeLists.txt  Makefile  bgsub  bgsub.cpp  bgsub.cpp.old  bgsub.xml  cmake_install.cmake  out.xml
